{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 166,
  "lineage": "70b0bf01-3050-c06f-8d60-6738c65a1d4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c5fbfdc5f42fa11",
            "association_id": "eipassoc-00734f98a7c87468c",
            "domain": "vpc",
            "id": "eipalloc-02c5fbfdc5f42fa11",
            "instance": "i-0fb6cf5381f744563",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-096aed174bdf4f57f",
            "private_dns": "ip-172-31-11-226.sa-east-1.compute.internal",
            "private_ip": "172.31.11.226",
            "public_dns": "ec2-15-229-193-176.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.229.193.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wppEvent-api-epi"
            },
            "tags_all": {
              "Name": "wppEvent-api-epi"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.api",
            "aws_key_pair.deployer-key",
            "aws_security_group.allow_api",
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu",
            "data.template_file.userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f47fe3e9defb4cbf",
            "arn": "arn:aws:ec2:sa-east-1:042070713889:instance/i-0fb6cf5381f744563",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb6cf5381f744563",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wppEvent-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096aed174bdf4f57f",
            "private_dns": "ip-172-31-11-226.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.226",
            "public_dns": "ec2-15-229-16-56.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.229.16.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d59befc11e1def54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_api",
              "terraform-20230520015221439400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e293dc3af741fb0",
            "tags": {
              "Name": "wppEvent-api-instance"
            },
            "tags_all": {
              "Name": "wppEvent-api-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0557fdfacb4214525",
              "sg-0fd1960ff293f0215"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer-key",
            "aws_security_group.allow_api",
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu",
            "data.template_file.userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:042070713889:security-group/sg-0557fdfacb4214525",
            "description": "allow port 3000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0557fdfacb4214525",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Api from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "allow_api",
            "name_prefix": "",
            "owner_id": "042070713889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_api"
            },
            "tags_all": {
              "Name": "allow_api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0021634edfe997455"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:042070713889:security-group/sg-0fd1960ff293f0215",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd1960ff293f0215",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230520015221439400000002",
            "name_prefix": "terraform-",
            "owner_id": "042070713889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0021634edfe997455"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}